small css change

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+html, body {
+  background-color: #000000;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
